--- a/style.css/menu.css
+++ b/style.css/menu.css
@@ -2,6 +2,7 @@
   background-color: #f3f3f3; 
   padding: 60px 0px;
   text-align: center;
+  position: relative; /* Tambahkan ini agar tombol slider menempel */
 }
 
 .teks-menu {
@@ -12,18 +13,22 @@
 }
 
 .menu-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 25px;
   width: 85%;
   margin: 0 auto;
 }
 
 .menu-card {
-  background-color: white;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+
+    /* --- Tambahkan/Ubah Properti Ini --- */
+    width: 300px; /* Tentukan lebar pasti untuk satu kartu, sesuaikan jika perlu */
+    display: inline-block; /* Agar kartu berbaris horizontal */
+    vertical-align: top; /* Menjaga perataan atas tetap rapi */
+    margin-right: 15px; /* Memberi jarak antar kartu */
+    cursor: pointer; /* Sesuai script.js untuk membuatnya bisa diklik */
 }
 
 .menu-card img {
