--- a/style.css/location.css
+++ b/style.css/location.css
@@ -90,4 +90,18 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   min-height: 600px;
   position: relative;
+
+  width: 100%;
+  overflow: hidden;
+  z-index: 1;
+}
+
+/* Styling untuk popup Leaflet */
+.leaflet-popup-content-wrapper {
+  border-radius: 8px;
+  box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+}
+
+.leaflet-popup-content {
+  margin: 12px;
 }
