--- a/style.css/home.css
+++ b/style.css/home.css
@@ -1,31 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Finlandica:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Finlandica:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    height: 3000px;
+  font-family: Arial, sans-serif;
+  height: 3000px;
 }
 
 .home-page {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .home-page-container {
-    position: relative;
-    width: 100%;
-    min-height: 700px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0px 20px 0px 20px;
+  position: relative;
+  width: 100%;
+  min-height: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 20px 0px 20px;
 }
 
 /* --- CSS UNTUK BACKGROUND SLIDER --- */
@@ -52,16 +52,26 @@ body {
 
   /* Terapkan animasi: nama, durasi total, perputaran */
   /* Durasi 15s / 3 gambar = 5 detik per gambar */
-  animation: fadeSlider 15s infinite; 
+  animation: fadeSlider 15s infinite;
 }
 
 /* 3. Definisikan @keyframes untuk animasi fade */
 @keyframes fadeSlider {
-  0%   { opacity: 0; }   /* Mulai (transparan) */
-  11%  { opacity: 1; }   /* Waktu fade-in selesai (muncul) */
-  33%  { opacity: 1; }   /* Tahan gambar tetap terlihat */
-  44%  { opacity: 0; }   /* Waktu fade-out selesai (hilang) */
-  100% { opacity: 0; }   /* Sisa durasi (transparan) */
+  0% {
+    opacity: 0;
+  } /* Mulai (transparan) */
+  11% {
+    opacity: 1;
+  } /* Waktu fade-in selesai (muncul) */
+  33% {
+    opacity: 1;
+  } /* Tahan gambar tetap terlihat */
+  44% {
+    opacity: 0;
+  } /* Waktu fade-out selesai (hilang) */
+  100% {
+    opacity: 0;
+  } /* Sisa durasi (transparan) */
 }
 
 /* 4. Atur delay (penundaan) animasi agar gambar bergantian */
@@ -77,73 +87,73 @@ body {
 /* --- AKHIR DARI CSS SLIDER --- */
 
 .home-page-container::before {
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 2;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
 }
 
 .restaurant-logo {
-    position: relative;
-    z-index: 3;
-    padding: 0px;
-    margin: 0px 0px 30px 0px;
+  position: relative;
+  z-index: 3;
+  padding: 0px;
+  margin: 0px 0px 30px 0px;
 }
 
 .restaurant-image {
-    width: 128px;
-    object-fit: contain;
+  width: 128px;
+  object-fit: contain;
 }
 
 .teks1-home {
-    font-family: figtree;
-    position: relative;
-    z-index: 3;
-    font-size: 64px;
-    font-weight: 700px;
-    color: white;
-    text-align: center;
-    margin-bottom: 0px;
+  font-family: figtree;
+  position: relative;
+  z-index: 3;
+  font-size: 64px;
+  font-weight: 700px;
+  color: white;
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .teks2-home {
-    font-family: figtree;
-    position: relative;
-    z-index: 3;
-    font-size: 64px;
-    font-weight: 700px;
-    color: white;
-    text-align: center;
-    margin-bottom: 35px;
+  font-family: figtree;
+  position: relative;
+  z-index: 3;
+  font-size: 64px;
+  font-weight: 700px;
+  color: white;
+  text-align: center;
+  margin-bottom: 35px;
 }
 
 .teks3-home {
-    font-family: finlandica;
-    position: relative;
-    z-index: 3;
-    font-size: 28px;
-    font-weight: 400px;
-    color: white;
-    text-align: center;
-    margin-bottom: 45px;
-    width: 673px;
+  font-family: finlandica;
+  position: relative;
+  z-index: 3;
+  font-size: 28px;
+  font-weight: 400px;
+  color: white;
+  text-align: center;
+  margin-bottom: 45px;
+  width: 673px;
 }
 
 .button-home {
-    position: relative;
-    z-index: 3;
-    background-color: white;
-    color: #000000;
-    margin: 0px 0px 40px;
-    padding: 16px 40px;
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 50px;
-    cursor: pointer;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
-    border: none;
+  position: relative;
+  z-index: 3;
+  background-color: white;
+  color: #000000;
+  margin: 0px 0px 40px;
+  padding: 16px 40px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  border: none;
 }
