--- a/style.css/home.css
+++ b/style.css/home.css
@@ -157,3 +157,8 @@ body {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
   border: none;
 }
+
+.button-home a {
+  text-decoration: none;
+  color: #000000;
+}
