--- a/style.css/footer.css
+++ b/style.css/footer.css
@@ -1,12 +1,12 @@
 .footer {
-  background-color: #ffffff;
-  color: #666666;
+  background-color: #f28907;
+  color: #f2f2f2;
   text-align: center;
   padding: 20px 0;
   font-size: 14px;
   border-top: 1px solid #e0e0e0;
   letter-spacing: 0.3px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .footer p {
