--- a/Style/home.css
+++ b/Style/home.css
@@ -82,15 +82,43 @@
 .home-container{ max-width:1200px; margin:0 auto; padding:0 1.5rem }
 
 /* welcome */
-.welcome-section{ text-align:center; margin-bottom:2.5rem }
-.tagline{ font-size:2rem; color:var(--accent); font-weight:800; margin-bottom:.6rem }
-.description{ color:var(--muted); max-width:760px; margin:0 auto 1.2rem; line-height:1.7 }
-.cta-buttons{ display:flex; gap:12px; justify-content:center }
+.welcome-section { 
+  text-align:center; 
+  margin-bottom:2.5rem;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+  /* padding: 30px; */
+}
+.tagline { 
+  font-size:3rem; 
+  color:black; 
+  font-weight:800; 
+  margin-bottom:.6rem;
+  font-family: 'Londrina Solid', sans-serif; 
+}
+.description { 
+  color:var(--muted); 
+  max-width:760px; 
+  margin:0 auto 1.2rem; 
+  line-height:1.7;
+  font-size: 20px;
+}
+.cta-buttons { 
+  display:flex; 
+  gap:12px; 
+  justify-content:center;
+}
+/* .btn-primary{ background:var(--accent); color:#fff;  box-shadow:0 4px 15px rgba(255,69,0,0.3) }
+.btn-primary:hover{ background:#e03e00; transform:translateY(-2px); box-shadow:0 6px 20px rgba(255,69,0,0.4) } */
 
 /* buttons shared */
 .btn{ padding:.8rem 1.8rem; border-radius:10px; text-decoration:none; font-weight:700; display:inline-block }
-.btn-primary{ background:var(--accent); color:#fff; }
-.btn-secondary{ background:#fff; color:var(--accent); border:2px solid var(--accent) }
+.btn-primary{ background:#fff; color:#000000; border:1px solid rgb(51, 51, 51); box-shadow: 0 4px 15px rgba(255,69,0,0.3) }
+.btn-secondary{ background:#c0392b; color:white; box-shadow: 0 4px 15px rgba(255,69,0,0.3) }
+.btn-secondary:hover{ background: #d82713; transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 69, 0, 0.4) }
 
 /* MENU UNGGULAN */
 .menu-section{ margin:2rem 0 }
