--- a/Style/home.css
+++ b/Style/home.css
@@ -78,13 +78,21 @@
 } */
 
 /* home.css - menu, why-us, about, location, reviews, promo, footer */
-.home{ background: linear-gradient(135deg,#fffafa 0%, #ffffff 100%); padding:3.5rem 0 }
-.home-container{ max-width:1200px; margin:0 auto; padding:0 1.5rem }
+.home {
+  background: linear-gradient(135deg,#fffafa 0%, #ffffff 100%);
+  width: 100%;
+  /* padding:3.5rem 0 */
+}
+.home-container { 
+  /* max-width:1200px; */
+  margin:0 auto;
+  /* padding:0 1.5rem */
+}
 
 /* welcome */
 .welcome-section { 
   text-align:center; 
-  margin-bottom:2.5rem;
+  padding-bottom: 100px;
   height: 70vh;
   display: flex;
   flex-direction: column;
@@ -121,8 +129,20 @@
 .btn-secondary:hover{ background: #d82713; transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 69, 0, 0.4) }
 
 /* MENU UNGGULAN */
-.menu-section{ margin:2rem 0 }
-.section-heading{ font-size:1.4rem; margin-bottom:1rem; font-weight:800; color:#222 }
+.menu-section { 
+  margin:2rem 0;
+  background-color: #f3f3f3;
+}
+.section-heading {
+  justify-self: center;
+  font-size:2.5rem;
+  margin-bottom:1rem;
+  padding-top: 20px;
+  padding-bottom: 25px;
+  font-weight:800; 
+  color:#222;
+  font-family: 'Londrina Solid', sans-serif;
+}
 .menu-grid{ display:grid; grid-template-columns: repeat(3,1fr); gap:1.2rem }
 .menu-card{ background:var(--card-bg); border-radius:12px; overflow:hidden; box-shadow:0 6px 20px rgba(0,0,0,0.06); display:flex; flex-direction:column }
 .menu-card img{ width:100%; height:200px; object-fit:cover }
